# ChangeLog for www-client/chromium
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.667 2012/07/11 03:00:55 floppym Exp $

*chromium-22.0.1201.0 (11 Jul 2012)

  11 Jul 2012; Mike Gilbert <floppym@gentoo.org> +chromium-22.0.1201.0.ebuild,
  chromium-9999-r1.ebuild:
  Version bump for dev channel release. Resolve bug 424023 by Mathieu Zhang.

  11 Jul 2012; Mike Gilbert <floppym@gentoo.org>
  files/chromium-alignment-r0.patch:
  Convert to UNIX line endings, bug 425632 by Igor Franchuck.

  28 Jun 2012; Agostino Sarubbo <ago@gentoo.org> -chromium-19.0.1084.52.ebuild,
  -chromium-19.0.1084.56-r1.ebuild, -chromium-20.0.1132.42.ebuild:
  Remove old

  28 Jun 2012; Agostino Sarubbo <ago@gentoo.org> chromium-20.0.1132.43.ebuild:
  Stable for X86, wrt bug #423719

  27 Jun 2012; Richard Freeman <rich0@gentoo.org> chromium-20.0.1132.43.ebuild:
  amd64 stable - 423719

*chromium-20.0.1132.43 (26 Jun 2012)
*chromium-21.0.1180.11 (26 Jun 2012)

  26 Jun 2012; Mike Gilbert <floppym@gentoo.org> +chromium-20.0.1132.43.ebuild,
  +chromium-21.0.1180.11.ebuild, -chromium-20.0.1132.39.ebuild,
  -chromium-21.0.1171.0.ebuild:
  Version bumps for beta and dev channel releases.

*chromium-20.0.1132.42 (23 Jun 2012)

  23 Jun 2012; Mike Gilbert <floppym@gentoo.org> +chromium-20.0.1132.42.ebuild,
  -chromium-20.0.1132.34.ebuild:
  Version bump for beta channel release.

*chromium-20.0.1132.39 (21 Jun 2012)

  21 Jun 2012; Mike Gilbert <floppym@gentoo.org> +chromium-20.0.1132.39.ebuild,
  -chromium-20.0.1132.27-r1.ebuild:
  Version bump for beta channel release.

*chromium-21.0.1180.0 (20 Jun 2012)

  20 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-19.0.1084.56.ebuild, -chromium-20.0.1132.27.ebuild,
  -chromium-21.0.1163.0.ebuild, +chromium-21.0.1180.0.ebuild,
  chromium-9999-r1.ebuild:
  Dev channel bump. Remove old.

*chromium-20.0.1132.34 (14 Jun 2012)
