@@ -27,14 +27,14 @@ EBUILD chromium-20.0.1132.43.ebuild 13695 SHA256 7da9177f77bf74b6c8f7b83c922390f
 EBUILD chromium-21.0.1180.0.ebuild 13795 SHA256 598cfe97f130045f91974439f5b2a99c973f5266a4deef04fb6b919584048aef SHA512 7a795c4e0216bd21e98e965067103fe5f3182045352e5a9c38cab88b9e3db223ffb0d6c76c05c4e771da513bbf5df37f9e57d5e32c0a2e257cb0e5ab577cc79b WHIRLPOOL 91e5b2ac1f90e9252502463b9f81f0106d33764ac01d4cb4c58ff51b95de7d822da006c7d00351efb57155ead306d9e268dde5f6b07638346f856689cfd89dd7
 EBUILD chromium-21.0.1180.11.ebuild 13793 SHA256 36cba7175521708a6f6fe3619c3d5efd5ce45e44e4c0091dbbad171d240de886 SHA512 3f08bdbfd8fd37bbfef2db28b118976ae27284aefaf4aa5c0971fe429561cb94843a1264e27755dcf982f4d4c464163b7d00ef5e0c3cdd2af46f2ccdc961d91c WHIRLPOOL 48325b01aba81d76e05271d3858450751ed62551b35dc230f8b2f9ad9de5ba95ee086e1d3958cadd313c8fefd73ca83915094b02f33e42a86203c7391910582b
 EBUILD chromium-22.0.1201.0.ebuild 13764 SHA256 db4560e1f7bdf1879718bfb0eca6b8fd230ecd19760d1a4be4ff85d890d3b56f SHA512 1165ae9a10d58fc8b1fbb85016ac43bf3101aad7c66195a7c920a512f405447f301e3999c2c2ff20d3d8f09c7466968efefc625f314b4f1fde4db1efeea2c479 WHIRLPOOL 9b45d1546f1c09467bcf5773a97bb5c7d9ece9679b8185b45fe0347f1f49d2916b1b3584ab2d212e5d170613c5f47f44dcdefe88b4839cae368de4ad90803014
-EBUILD chromium-9999-r1.ebuild 15315 SHA256 c7c98fce4db257890f98951d663010ba41ad3d9e4d66c4a93a27384d206e5a53 SHA512 de6999180835eaaf658a11cfb0d7f8bc669dc188dbf25e106f35df5a5f88bfca8aa7ec2dac6b83a59639db38106eda1a08ac5643ffafaa5e36b472aee2b1e579 WHIRLPOOL 41f7776779020e3258beb2422d3acf2507d9e2c3e0d8cc6276f8037c350c3948b5144324c9181234c8ea44aaacdef4df4a2e85874073935262a42f1370943790
-MISC ChangeLog 28307 SHA256 f5157459efd3b2a02424a2f9e450fb5336ea55335247edf2c16121da00f0271e SHA512 3613b8ae0bc9f97fad8e9c4de49e294c4bc1a2c6deabeee7ec3d48ea5b9931339016e27f4b5c91dedc6b9e6beda6d2b0c6973e17f9ad4d0f538b5d0efa9ddb9f WHIRLPOOL 74e2d18f18c8306b47c562dbe9314fb6c36968e0c581268bdb9ee8716176cccbfea76f631130a66301710331ca84d84048d0b8c85f0edec0e9ddc7eb77af698d
+EBUILD chromium-9999-r1.ebuild 15330 SHA256 70ff611af28bf414da20d7d1e2ef6b27f5a1ecf4d7663ddabba14d558f6fc18a SHA512 19b2beb5eb4d3999a9a2d02e3d0d6bc853be9824640729c052ca3037f020cfdf728560d7ca63b1c242932445cffcfdde2a1bd8af332be6c20962e2ed2950b55f WHIRLPOOL d1e54caaa44f23168cf9f707c62aa2f347659e4b34f3f13dd0f49f2777866d1295eb926ee7cd5b975cd412c8949da1d4e140037bb2bc9f232501c447bffafa3e
+MISC ChangeLog 28440 SHA256 2064df3fd73ba3557296a92a775e30c393d1d68cb776d798dbb5a0b3f609b5c7 SHA512 72d8a22b7f1cf2e0a9a46588b0061f966db78b1e6614a14f46c13c7994792935fe76a96b767d4169c15db013f24d2e6daf0ccc3772130df3aad7346585ca9c54 WHIRLPOOL d4ec03af9bf24e9f333eb8207a14a469bf5617cde4d9010de56af42f4fef880c64ab08a0f8c9752b03b8aacdfca14601b9363b7bdcb4055692511786fcdb4b26
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC metadata.xml 267 SHA256 4e6afae33f60d6752cacf2785f7f9a396b8711cce605b73d0d752a4af7d01fc8 SHA512 f6d64d50bfbfad74db0ca0454fcba335a1744d11a44f921f19545c478219c507994cfcaba13160215cbb5a77d0bc82cdbf64a90a4b1b169184e404e404f9029e WHIRLPOOL 66a5cdeac3a86b910040d4c601fef50465fb0e0a0805e6b1c22cde2a83a63a2a1d441643af5454775becdfc65c71116d00b27703a7dd15ced183fb223c32f075
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk/87G4ACgkQC77qH+pIQ6SdwwEAvLkCAoq7OKe12AcFOlLy8UC8
-731yAc/euOdhpFmhybQA/RyZzNSg0AhRHPrSFqqHD3WQZBUI+8DdywggzP8L4f21
-=lpbA
+iF4EAREIAAYFAk/883YACgkQC77qH+pIQ6QRUAD+ORIT+hVb3PIyTG3pqyWmozcw
+1bDM1qz4fVgmiGL36d4A/A9nnjsyxzcsKN8pnjwQVYyvwWez43cibJNdQ6Hvrz9W
+=eJCQ
 -----END PGP SIGNATURE-----
